placeholderをお客様情報に追加しました。

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -48,6 +48,10 @@ ul.label {
     text-align: left;
 }
 
+.field1 {
+    text-align: left;
+}
+
 .number {
     text-align: right;
     vertical-align: middle !important;
