職業を選択制にしました。

--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -230,14 +230,19 @@
                                     <label>ご職業</label>
                                     <p style="color:red;">＊</p></td>
                                 <td>
-                                    <div th:each="item : ${jobTypes}" class="field"
-                                         th:classappend="${errors.hasError('job')} ? 'error'">
-                                        <input type="radio" name="job" th:value="${item.code}" th:text="${item.label}"
-                                               th:field="*{job}" th:checked="${form.job}==${item.code}"/>
-                                    </div>
-                                    <p th:if="${errors.hasError('job')}" th:text="${errors.getMessage('job')}"
-                                       class="error-message">
-                                    </p>
+                                    <select name="職業">
+                                        <option value="keiei/jieigyo">経営・自営業</option>
+                                        <option value="kaisyain" selected="">会社員</option>
+                                        <option value="keiyaku/hakensyain">契約・派遣社員</option>
+                                        <option value="komuin">公務員</option>
+                                        <option value="minkandantai" selected="">民間団体</option>
+                                        <option value="syufu">主婦</option>
+                                        <option value="gakusei">学生</option>
+                                        <option value="nenkinzyukyusya" selected="">年金受給者の方</option>
+                                        <option value="pato/arubaito">パート・アルバイト</option>
+                                        <option value="sonota(yusyoku)">その他(有職)</option>
+                                        <option value="sonota(musyoku)" selected="">その他(無職)</option>
+                                    </select>
                                 </td>
                             </tr>
                             <tr>
