申し込みの文字を黄色にしました。

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -142,6 +142,10 @@ ul.label {
     height: 300px;
 }
 
+.index-button:hover {
+    color:#FFFF00;
+}
+
 .index-text{
     position:relative;
     text-align:left;
