add confirm view

--- a/src/main/resources/template/acceptance.html
+++ b/src/main/resources/template/acceptance.html
@@ -25,7 +25,7 @@
             <div class="acceptance-icon" style="border:solid 3px #0174DF;" th:if="${insOrder.insuranceType.equals('future')}">
                 <img src="/img/icon_future.png">
             </div>
-            <div class="ui middle center aligned grid">
+            <div class="ui middle aligned grid">
                 <div class="ui segment metrixir" style="width: 700px;margin: 30px;">
                     <h1 class="ui aligned header teal center">ご加入条件確認</h1>
 
