add confirm view 2

--- a/src/main/resources/template/confirm.html
+++ b/src/main/resources/template/confirm.html
@@ -38,7 +38,7 @@
                         <div class="ui info message">
 
                             <div class="header">ご入力内容</div>
-                            <table class="confirm">
+                            <table class="confirm center">
                                 <tr>
                                     <th><label>お名前（漢字）</label></th>
                                     <th><p th:text="${insOrder.kanjiName}"></p></th>
